--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "chai-backend",
   "version": "1.0.0",
-  "description": "to pratice backend from Chai Aur Code",
+  "description": "to practice backend from Chai Aur Code",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
   },
+
   "keywords": [
     "javascript",
     "backend",
     "chai"
   ],
   "author": "Tejas Kamble",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": { 
+    "nodemon": "^3.1.10"
+  }
 }
