--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon src/index.js"
   },
-
   "keywords": [
     "javascript",
     "backend",
@@ -15,7 +14,8 @@
   ],
   "author": "Tejas Kamble",
   "license": "ISC",
-  "devDependencies": { 
-    "nodemon": "^3.1.10"
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
